--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-GlobalDefaultGameMode="/Script/ReplicationTest.ReplicationTestGameMode"
+GlobalDefaultGameMode=/Game/ThirdPersonCPP/Blueprints/ReplicationTestGameMode_BP.ReplicationTestGameMode_BP_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
