--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,4 +17,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/ReplicationTest")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="ReplicationTestGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="ReplicationTestCharacter")
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
