Basic snapshot interpolation.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,3 +20,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 bUseFixedFrameRate=True
 FixedFrameRate=60.000000
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
+
