--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 GlobalDefaultGameMode=/Game/ThirdPersonCPP/Blueprints/ReplicationTestGameMode_BP.ReplicationTestGameMode_BP_C
+ServerDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
@@ -17,8 +18,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/ReplicationTest")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="ReplicationTestGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="ReplicationTestCharacter")
-bUseFixedFrameRate=True
+bUseFixedFrameRate=False
 FixedFrameRate=60.000000
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=144.000000))
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.MotionBlur=False
