--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,7 +18,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/ReplicationTest")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="ReplicationTestGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="ReplicationTestCharacter")
-bUseFixedFrameRate=True
+bUseFixedFrameRate=False
 FixedFrameRate=60.000000
 SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=144.000000))
 
